--- a/css/styles.css
+++ b/css/styles.css
@@ -701,6 +701,7 @@ footer {
 }
 
 .eco-slide {
+    max-width: 400px;
     padding-bottom: 48px;
     margin: 20px 18px;
     transition: all .4s ease;
